# entity

./: .gitmodules  CMakeLists.txt
entity/: CMakeLists.txt
entity/include/entity/: camera.h  font.h  mesh.h  node.h
entity/include/entity/c/level/: level.h
entity/include/entity/c/mesh/: color.h  material.h  material_utils.h  mesh.h  mesh_utils.h  texture.h  texture_utils.h
entity/include/entity/c/misc/: font.h  font_utils.h
entity/include/entity/c/runtime/: font.h  font_utils.h  image.h  image_utils.h  texture.h  texture_utils.h
entity/include/entity/c/scene/: camera.h  camera_utils.h  light.h  light_utils.h  node.h  node_utils.h  scene.h  scene_utils.h
entity/include/entity/c/spatial/: bvh.h  bvh_utils.h
entity/include/entity/internal/: module.h
entity/include/entity/mesh/: color.h  material.h  mesh.h  mesh_utils.h  skinned_mesh.h  texture.h
entity/include/entity/misc/: font.h
entity/include/entity/runtime/: font.h  font_utils.h  texture.h  texture_utils.h
entity/include/entity/scene/: animation.h  animation_utils.h  camera.h  light.h  node.h  scene.h
entity/include/entity/spatial/: bvh.h
entity/source/c/mesh/: material.c  material_utils.c  mesh.c  mesh_utils.c  texture.c  texture_utils.c
entity/source/c/misc/: font.c  font_utils.c
entity/source/c/runtime/: font_utils.c  image_utils.c  texture_utils.c
entity/source/c/scene/: camera.c  camera_utils.c  light.c  light_utils.c  node.c  node_utils.c  scene.c  scene_utils.c
entity/source/c/spatial/: bvh.c  bvh_utils.c
entity/source/mesh/: material.c  mesh.c  mesh_utils.c  skinned_mesh.c  texture.c
entity/source/misc/: font.c
entity/source/runtime/: font_utils.c  texture_utils.c
entity/source/scene/: animation.c  animation_utils.c  camera.c  light.c  node.c  scene.c
entity/source/spatial/: bvh.c
include/entity/: image.h
